[package]
name = "fixture-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
ethportal-api = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ssz_types = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3"
